crates/lang/macro/tests/ui/trait_def/fail/invalid_namespace_2.stderr
error: expected `=`
 --> $DIR/invalid_namespace_2.rs:3:1
  |
3 | #[ink::trait_definition(namespace)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ink::trait_definition` (in Nightly builds, run with -Z macro-backtrace for more info)
